--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/plan/plan.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/plan/plan.component.html
@@ -1,5 +1,6 @@
 <nav_bar></nav_bar>
-<section class="section-header bg-primary text-white pb-7 pb-lg-11">
+<div class="body-container">
+<section class="section-header text-white pb-7 pb-lg-11">
     <div class="container-fluid">
         <div id ="plan-header" class="row justify-content-center mb-6">
             <div class="col-12 col-md-10 text-center">
@@ -19,9 +20,9 @@
                     <div class="card-header border-light px-4">
                         <!-- Price -->
                         <div class="d-flex mb-3">
-                            <span class="h5 mb-0">$</span>
+                            <span class="symbol-age h5 mb-0">$</span>
                             <span class="price display-2 mb-0" data-annual="0" data-monthly="0">12</span>
-                            <span class="h6 font-weight-normal align-self-end">/Año</span>
+                            <span class="symbol-age h6 font-weight-normal align-self-end">/Año</span>
                         </div>
                         <h4 class="mb-3 text-black">Económico</h4>
                         <p class="font-weight-normal mb-0 d-none">If you're new to SEO or just need the basics,
@@ -62,10 +63,10 @@
 
                         </ul>
                     </div>
-                    <div class="card-footer px-4 pb-4">
+                    <div class="bottom-enviar card-footer px-4 pb-4">
                         <!-- Button -->
                         <a [routerLink]="['/registro']"
-                            class="btn btn-block btn-outline-secondary animate-up-2">
+                            class="button-enviar btn btn-block btn-outline-secondary animate-up-2">
                             Comprar <span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -78,10 +79,10 @@
                     <div class="card-header border-light px-4">
                         <!-- Price -->
                         <div class="d-flex mb-3 text-primary">
-                            <span class="h5 mb-0">$</span>
-                            <span class="price display-2 text-primary mb-0" data-annual="199"
+                            <span class="symbol-age h5 mb-0">$</span>
+                            <span class="price display-2 mb-0" data-annual="199"
                                 data-monthly="99">23</span>
-                            <span class="h6 font-weight-normal align-self-end">/Año</span>
+                            <span class="symbol-age h6 font-weight-normal align-self-end">/Año</span>
                         </div>
                         <h4 class="mb-3 text-black">Avanzado</h4>
                         <p class="font-weight-normal mb-0 d-none">Ample limits plus full access to keyword
@@ -120,9 +121,9 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="card-footer px-4 pb-4">
+                    <div class="bottom-enviar card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-primary">
+                        <a [routerLink]="['/registro']" class="button-enviar btn btn-block btn-outline-primary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -135,10 +136,10 @@
                     <div class="card-header border-light px-4">
                         <!-- Price -->
                         <div class="d-flex mb-3 text-primary">
-                            <span class="h5 mb-0">$</span>
-                            <span class="price display-2 text-primary mb-0" data-annual="299"
+                            <span class="symbol-age h5 mb-0">$</span>
+                            <span class="price display-2 mb-0" data-annual="299"
                                 data-monthly="199">29</span>
-                            <span class="h6 font-weight-normal align-self-end">/Año</span>
+                            <span class="symbol-age h6 font-weight-normal align-self-end">/Año</span>
                         </div>
                         <h4 class="mb-3 text-black">Óptimo</h4>
                         <p class="font-weight-normal mb-0 d-none">The ideal plan for businesses and agencies
@@ -177,9 +178,9 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="card-footer px-4 pb-4">
+                    <div class="bottom-enviar card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-primary">
+                        <a [routerLink]="['/registro']" class="button-enviar btn btn-block btn-outline-primary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -192,10 +193,10 @@
                     <div class="card-header border-light px-4">
                         <!-- Price -->
                         <div class="d-flex mb-3">
-                            <span class="h5 mb-0">$</span>
-                            <span class="price display-2 text-secondary mb-0" data-annual="199"
+                            <span class="symbol-age h5 mb-0">$</span>
+                            <span class="price display-2 mb-0" data-annual="199"
                                 data-monthly="99">45</span>
-                            <span class="h6 font-weight-normal align-self-end">/Año</span>
+                            <span class="symbol-age h6 font-weight-normal align-self-end">/Año</span>
                         </div>
                         <h4 class="mb-3 text-black">Profesional</h4>
                         <p class="font-weight-normal mb-0 d-none">Ample limits plus full access to keyword
@@ -234,9 +235,9 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="card-footer px-4 pb-4">
+                    <div class="bottom-enviar card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-secondary">
+                        <a [routerLink]="['/registro']" class="button-enviar btn btn-block btn-outline-secondary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -249,10 +250,10 @@
                     <div class="card-header border-light px-4">
                         <!-- Price -->
                         <div class="d-flex mb-3 text-primary">
-                            <span class="h5 mb-0">$</span>
-                            <span class="price display-2 text-primary mb-0" data-annual="199"
+                            <span class="symbol-age h5 mb-0">$</span>
+                            <span class="price display-2 mb-0" data-annual="199"
                                 data-monthly="99">80</span>
-                            <span class="h6 font-weight-normal align-self-end">/Año</span>
+                            <span class="symbol-age h6 font-weight-normal align-self-end">/Año</span>
                         </div>
                         <h4 class="mb-3 text-black">Premium</h4>
                         <p class="font-weight-normal mb-0 d-none">Ample limits plus full access to keyword
@@ -291,9 +292,9 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="card-footer px-4 pb-4">
+                    <div class="bottom-enviar card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-primary">
+                        <a [routerLink]="['/registro']" class="button-enviar btn btn-block btn-outline-primary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -306,10 +307,10 @@
                     <div class="card-header border-light px-4">
                         <!-- Price -->
                         <div class="d-flex mb-3 text-primary">
-                            <span class="h5 mb-0">$</span>
-                            <span class="price display-2 text-primary mb-0" data-annual="199"
+                            <span class="symbol-age h5 mb-0">$</span>
+                            <span class="price display-2 mb-0" data-annual="199"
                                 data-monthly="99">95</span>
-                            <span class="h6 font-weight-normal align-self-end">/Año</span>
+                            <span class="symbol-age h6 font-weight-normal align-self-end">/Año</span>
                         </div>
                         <h4 class="mb-3 text-black">Business</h4>
                         <p class="font-weight-normal mb-0 d-none">Ample limits plus full access to keyword
@@ -348,9 +349,9 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="card-footer px-4 pb-4">
+                    <div class="bottom-enviar card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-primary">
+                        <a [routerLink]="['/registro']" class="button-enviar btn btn-block btn-outline-primary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -363,10 +364,10 @@
                     <div class="card-header border-light px-4">
                         <!-- Price -->
                         <div class="d-flex mb-3 ">
-                            <span class="h5 mb-0">$</span>
-                            <span class="price display-2 text-secondary mb-0" data-annual="199"
+                            <span class="symbol-age h5 mb-0">$</span>
+                            <span class="price display-2 mb-0" data-annual="199"
                                 data-monthly="99">125</span>
-                            <span class="h6 font-weight-normal align-self-end">/Año</span>
+                            <span class="symbol-age h6 font-weight-normal align-self-end">/Año</span>
                         </div>
                         <h4 class="mb-3 text-black">Hiper</h4>
                         <p class="font-weight-normal mb-0 d-none">Ample limits plus full access to keyword
@@ -409,29 +410,30 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="card-footer px-4 pb-4">
+                    <div class="bottom-enviar card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-secondary">
+                        <a [routerLink]="['/registro']" class="button-enviar btn btn-block btn-outline-secondary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-        <!--***** Seccion oculta *****-->
+        <!--***** Seccion oculta *****
         <div class="row justify-content-center d-none">
             <div class="col col-md-10 text-center">
                 <h2 class="mb-3">Still not convinced? Start with a 3-day FREE trial!</h2>
                 <p class="lead mb-5 px-5">You will get full access to your Dashboard with all the features for 3
                     days.</p> 
-                <!-- Button -->
+                <Button>
                 <a href="../../dashboard/pages/dashboards/dashboard.html" target="_blank"
                     class="btn btn-secondary animate-up-2">
                     Start a free demo<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                 </a>
             </div>
-        </div>
+        </div>-->
     </div>
     <div class="pattern bottom"></div>
 </section>
 <compare-plan></compare-plan>
+</div>
