--- a/frontend/Proyecto/src/app/componentes/empresa/partials/header-empresa/header-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/header-empresa/header-empresa.component.html
@@ -2,7 +2,7 @@
     <div id="nav-container" class="row w-100">
         <div class='navbar-brand col-2 align-items-center' >
             <div class="h-100 row align-content-center">
-                <a class="col-6 offset-6 nav-link navbar-brand" [routerLink]= "['/portal']" >Facturación</a>
+                <a class="col-6 offset-6 nav-link navbar-brand" [routerLink]= "['/portal/perfil']" >Facturación</a>
             </div>
         </div>
         <div class="navbar-nav col-1 offset-9">
