--- a/frontend/Proyecto/src/app/componentes/empresa/documentos/documentos-company.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/documentos/documentos-company.component.html
@@ -105,11 +105,11 @@
                 </tbody>
             </table>
             <div class="row justify-content-center">
-                <list-pagination class="col-9 row" urlRequest="/api/documentos/buscar_por_empresa/{{nombreDocumento}}"
+                <list-pagination class="col-9 row" urlRequest="/api/documentos/buscar_por_empresa/?tipo={{tipo}}{{nombreDocumento}}"
                     (listObjects)="obtenerObjetos($event)"></list-pagination>
             </div>
         </div>
-        <div id="emergente" class="w-100 conf hide">
+        <div id="emergente" class="w-100 conf hide visually-hidden">
             <div id="panel" class="form-floating form-floating-select hide">
                 <div>
                     <span>Seleccione el formato con el cual desea descargar su archivo</span>
